--- a/code/Development/org.mdse.pts.timetable.acceleo.TT2HTML/Output/Timetable.html
+++ b/code/Development/org.mdse.pts.timetable.acceleo.TT2HTML/Output/Timetable.html
@@ -12,18 +12,17 @@
 				</div>
 			</div>
 			<br/>
+			<div class="row">
+				<div class="col-6">
+					<h3>Arrivals</h3>
+				</div>
+				<div class="col-6">
+					<h3>Departures</h3>
+				</div>
+			</div>
+			<br/>
 				<div class="row">
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Monday</h4>
-									</div>
-								</div>
-									<div class="row">
-									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
-										</div>
-									</div>
 					</div>
 					<div class="col-6">
 								<div class="row">
@@ -33,7 +32,12 @@
 								</div>
 									<div class="row">
 										<div class="col-12">
-											IC22 to DLILLER on platform 1
+											00:00 sdxcbfgh to sdfsdf on platform mm,vnv
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-12">
+											22:22 IC22 to DLILLER on platform 1
 										</div>
 									</div>
 					</div>
@@ -48,21 +52,11 @@
 								</div>
 									<div class="row">
 									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
+											23:07 asd from asdasd on platform plat
 										</div>
 									</div>
 					</div>
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Tuesday</h4>
-									</div>
-								</div>
-									<div class="row">
-										<div class="col-12">
-											IC22 to DLILLER on platform 1
-										</div>
-									</div>
 					</div>
 				</div>
 				<br/>
@@ -75,48 +69,18 @@
 								</div>
 									<div class="row">
 									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
+											00:55 ICCCC1213 from ASDASD on platform 55
 										</div>
 									</div>
 					</div>
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Wednesday</h4>
-									</div>
-								</div>
-									<div class="row">
-										<div class="col-12">
-											IC22 to DLILLER on platform 1
-										</div>
-									</div>
 					</div>
 				</div>
 				<br/>
 				<div class="row">
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Thursday</h4>
-									</div>
-								</div>
-									<div class="row">
-									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
-										</div>
-									</div>
 					</div>
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Thursday</h4>
-									</div>
-								</div>
-									<div class="row">
-										<div class="col-12">
-											IC22 to DLILLER on platform 1
-										</div>
-									</div>
 					</div>
 				</div>
 				<br/>
@@ -129,63 +93,23 @@
 								</div>
 									<div class="row">
 									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
+											04:22 vbnvbn from vbnv on platform fgdghf
 										</div>
 									</div>
 					</div>
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Friday</h4>
-									</div>
-								</div>
-									<div class="row">
-										<div class="col-12">
-											IC22 to DLILLER on platform 1
-										</div>
-									</div>
 					</div>
 				</div>
 				<br/>
 				<div class="row">
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Saturday</h4>
-									</div>
-								</div>
-									<div class="row">
-									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
-										</div>
-									</div>
 					</div>
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Saturday</h4>
-									</div>
-								</div>
-									<div class="row">
-										<div class="col-12">
-											IC22 to DLILLER on platform 1
-										</div>
-									</div>
 					</div>
 				</div>
 				<br/>
 				<div class="row">
 					<div class="col-6">
-								<div class="row">
-									<div class="col-12">
-										<h4>Sunday</h4>
-									</div>
-								</div>
-									<div class="row">
-									 	<div class="col-12">
-											ICCCC1213 from ASDASD on platform 55
-										</div>
-									</div>
 					</div>
 					<div class="col-6">
 								<div class="row">
@@ -195,7 +119,7 @@
 								</div>
 									<div class="row">
 										<div class="col-12">
-											IC22 to DLILLER on platform 1
+											02:11 werwer to werwe on platform eewt
 										</div>
 									</div>
 					</div>
