finish interpreter, correct M2T

--- a/code/Development/org.mdse.pts.timetable.acceleo.TT2HTML/Output/Timetable.html
+++ b/code/Development/org.mdse.pts.timetable.acceleo.TT2HTML/Output/Timetable.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	</head>
 	
@@ -8,7 +9,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<h1>Timetable</h1>
+					<h1>København </h1>
 				</div>
 			</div>
 			<br/>
@@ -23,6 +24,16 @@
 			<br/>
 				<div class="row">
 					<div class="col-6">
+								<div class="row">
+									<div class="col-12">
+										<h4>Monday</h4>
+									</div>
+								</div>
+									<div class="row">
+									 	<div class="col-12">
+											16:34 IC500 from Aarhus on platform PLAT2
+										</div>
+									</div>
 					</div>
 					<div class="col-6">
 								<div class="row">
@@ -32,12 +43,7 @@
 								</div>
 									<div class="row">
 										<div class="col-12">
-											00:00 sdxcbfgh to sdfsdf on platform mm,vnv
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-12">
-											22:22 IC22 to DLILLER on platform 1
+											16:41 IC500 to Helsingør from platform PLAT2
 										</div>
 									</div>
 					</div>
@@ -52,9 +58,26 @@
 								</div>
 									<div class="row">
 									 	<div class="col-12">
-											23:07 asd from asdasd on platform plat
+											00:20 IC500 from Aarhus on platform PLAT2
 										</div>
 									</div>
+					</div>
+					<div class="col-6">
+								<div class="row">
+									<div class="col-12">
+										<h4>Tuesday</h4>
+									</div>
+								</div>
+									<div class="row">
+										<div class="col-12">
+											00:27 IC500 to Helsingør from platform PLAT2
+										</div>
+									</div>
+					</div>
+				</div>
+				<br/>
+				<div class="row">
+					<div class="col-6">
 					</div>
 					<div class="col-6">
 					</div>
@@ -64,23 +87,26 @@
 					<div class="col-6">
 								<div class="row">
 									<div class="col-12">
-										<h4>Wednesday</h4>
+										<h4>Thursday</h4>
 									</div>
 								</div>
 									<div class="row">
 									 	<div class="col-12">
-											00:55 ICCCC1213 from ASDASD on platform 55
+											16:34 IC500 from Aarhus on platform PLAT2
 										</div>
 									</div>
 					</div>
 					<div class="col-6">
-					</div>
-				</div>
-				<br/>
-				<div class="row">
-					<div class="col-6">
-					</div>
-					<div class="col-6">
+								<div class="row">
+									<div class="col-12">
+										<h4>Thursday</h4>
+									</div>
+								</div>
+									<div class="row">
+										<div class="col-12">
+											16:41 IC500 to Helsingør from platform PLAT2
+										</div>
+									</div>
 					</div>
 				</div>
 				<br/>
@@ -93,35 +119,35 @@
 								</div>
 									<div class="row">
 									 	<div class="col-12">
-											04:22 vbnvbn from vbnv on platform fgdghf
+											00:20 IC500 from Aarhus on platform PLAT2
 										</div>
 									</div>
-					</div>
-					<div class="col-6">
-					</div>
-				</div>
-				<br/>
-				<div class="row">
-					<div class="col-6">
-					</div>
-					<div class="col-6">
-					</div>
-				</div>
-				<br/>
-				<div class="row">
-					<div class="col-6">
 					</div>
 					<div class="col-6">
 								<div class="row">
 									<div class="col-12">
-										<h4>Sunday</h4>
+										<h4>Friday</h4>
 									</div>
 								</div>
 									<div class="row">
 										<div class="col-12">
-											02:11 werwer to werwe on platform eewt
+											00:27 IC500 to Helsingør from platform PLAT2
 										</div>
 									</div>
+					</div>
+				</div>
+				<br/>
+				<div class="row">
+					<div class="col-6">
+					</div>
+					<div class="col-6">
+					</div>
+				</div>
+				<br/>
+				<div class="row">
+					<div class="col-6">
+					</div>
+					<div class="col-6">
 					</div>
 				</div>
 				<br/>
